[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acme_utils"
version = "0.1.0"
description = "Personal utilities (Bitwarden, etc.)"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[tool.setuptools]
packages = ["acme_utils"]
package-dir = {"" = "src"}
