[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common_utils"
version = "0.1.0"
description = "Personal utilities (Bitwarden, etc.)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["utilities", "bitwarden", "development"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/futebolista99/CommonUtils"
"Bug Tracker" = "https://github.com/futebolista99/CommonUtils/issues"

[tool.setuptools]
packages = ["common_utils"]
package-dir = {"" = "src"}
